--- a/index.html
+++ b/index.html
@@ -111,32 +111,32 @@
             <h2>Our Portfolio</h2>
             <ul>
                 <li> 
-                    <img src="images/img" alt="1">
+                    <img src="images/img0.jpg" alt="1">
                     <h3></h3>
                     <p></p>
                 </li>
                 <li> 
-                    <img src="" alt="2">
+                    <img src="images/img1.jpg" alt="2">
                     <h3></h3>
                     <p></p>
                 </li>
                 <li> 
-                    <img src="" alt="3">
+                    <img src="images/img2.jpg" alt="3">
                     <h3></h3>
                     <p></p>
                 </li>
                 <li> 
-                    <img src="" alt="4">
+                    <img src="images/img3.jpg" alt="4">
                     <h3></h3>
                     <p></p>
                 </li>
                 <li> 
-                    <img src="" alt="5">
+                    <img src="images/img5.jpg" alt="5">
                     <h3></h3>
                     <p></p>
                 </li>
                 <li> 
-                    <img src="" alt="6">
+                    <img src="images/img4.jpg" alt="6">
                     <h3></h3>
                     <p></p>
                 </li>
