--- a/index.html
+++ b/index.html
@@ -111,34 +111,34 @@
             <h2>Our Portfolio</h2>
             <ul>
                 <li> 
-                    <img src="images/img0.jpg" alt="1">
-                    <h3></h3>
-                    <p></p>
+                    <img class="sect4-ul-img" src="images/img0.jpg" alt="1">
+                    <h3 class=".sect4-ul-title">Banking App</h3>
+                    <p class="sect4-ul-text">App</p>
                 </li>
                 <li> 
-                    <img src="images/img1.jpg" alt="2">
-                    <h3></h3>
-                    <p></p>
+                    <img class="sect4-ul-img" src="images/img1.jpg" alt="2">
+                    <h3 class=".sect4-ul-title">Cashless Payment</h3>
+                    <p class="sect4-ul-text">Marketing</p>
                 </li>
                 <li> 
-                    <img src="images/img2.jpg" alt="3">
-                    <h3></h3>
-                    <p></p>
+                    <img class="sect4-ul-img" src="images/img2.jpg" alt="3">
+                    <h3 class=".sect4-ul-title">Meditation App</h3>
+                    <p class="sect4-ul-text">App</p>
                 </li>
                 <li> 
-                    <img src="images/img3.jpg" alt="4">
-                    <h3></h3>
-                    <p></p>
+                    <img class="sect4-ul-img" src="images/img3.jpg" alt="4">
+                    <h3 class=".sect4-ul-title">Taxi Service</h3>
+                    <p class="sect4-ul-text">Marketing</p>
                 </li>
                 <li> 
-                    <img src="images/img5.jpg" alt="5">
-                    <h3></h3>
-                    <p></p>
+                    <img class="sect4-ul-img" src="images/img5.jpg" alt="5">
+                    <h3 class=".sect4-ul-title">Screen Illustrations</h3>
+                    <p class="sect4-ul-text">Design</p>
                 </li>
                 <li> 
-                    <img src="images/img4.jpg" alt="6">
-                    <h3></h3>
-                    <p></p>
+                    <img class="sect4-ul-img" src="images/img4.jpg" alt="6">
+                    <h3 class=".sect4-ul-title">Online Courses</h3>
+                    <p class="sect4-ul-text">Marketing</p>
                 </li>
             </ul>
         </section>
