--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <nav>
             <a class="nav-title" href="./index.html">Web<span>Studio</span></a>
             <ul class="nav-ul">
-                <li href="./index.html"><a class="nav-li-a" href="./index.html">Studio</a></li>
-                <li href="./index.html"><a class="nav-li-a" href="./index.html">Portfolio</a></li>
-                <li href="./index.html"><a class="nav-li-a" href="./index.html">Contacts</a></li>
+                <li><a class="nav-li-a" href="./index.html">Studio</a></li>
+                <li><a class="nav-li-a" href="">Portfolio</a></li>
+                <li><a class="nav-li-a" href="">Contacts</a></li>
             </ul>
         </nav>
         
@@ -35,7 +35,7 @@
 
     <main>
         <section class="sect_one">
-            <h1 class="sect_one-h1">
+            <h1 class="sect_one-title">
                 Effective Solutions for Your Business
             </h1>
     
@@ -84,7 +84,7 @@
         <section class="sect_three">
             <h2 class="sect_three-title">Our Team</h2>
         <ul class="sect_three-li">
-            <li>
+            <li class="sect_three-ul-li">
                 <img class="sect_three-ul-img"  src="./images/img.jpg" alt="фото робітника 1">
                 <h3 class="sect_three-ul-title">Mark Guerrero</h3>
                 <p class="sect_three-ul-text">Product Designer</p>
@@ -112,32 +112,32 @@
             <ul>
                 <li> 
                     <img class="sect_four-ul-img" src="./images/img0.jpg" width="360" alt="1">
-                    <h3 class=".sect_four-ul-title">Banking App</h3>
+                    <h3 class="sect_four-ul-title">Banking App</h3>
                     <p class="sect_four-ul-text">App</p>
                 </li>
                 <li> 
                     <img class="sect_four-ul-img" src="./images/img1.jpg" width="360" alt="2">
-                    <h3 class=".sect_four-ul-title">Cashless Payment</h3>
+                    <h3 class="sect_four-ul-title">Cashless Payment</h3>
                     <p class="sect_four-ul-text">Marketing</p>
                 </li>
                 <li> 
                     <img class="sect_four-ul-img" src="./images/img2.jpg" width="360" alt="3">
-                    <h3 class=".sect_four-ul-title">Meditation App</h3>
+                    <h3 class="sect_four-ul-title">Meditation App</h3>
                     <p class="sect_four-ul-text">App</p>
                 </li>
                 <li> 
                     <img class="sect_four-ul-img" src="./images/img3.jpg" width="360" alt="4">
-                    <h3 class=".sect_four-ul-title">Taxi Service</h3>
+                    <h3 class="sect_four-ul-title">Taxi Service</h3>
                     <p class="sect_four-ul-text">Marketing</p>
                 </li>
                 <li> 
                     <img class="sect_four-ul-img" src="./images/img5.jpg" width="360" alt="5">
-                    <h3 class=".sect_four-ul-title">Screen Illustrations</h3>
+                    <h3 class="sect_four-ul-title">Screen Illustrations</h3>
                     <p class="sect_four-ul-text">Design</p>
                 </li>
                 <li> 
                     <img class="sect_four-ul-img" src="./images/img4.jpg" width="360" alt="6">
-                    <h3 class=".sect_four-ul-title">Online Courses</h3>
+                    <h3 class="sect_four-ul-title">Online Courses</h3>
                     <p class="sect_four-ul-text">Marketing</p>
                 </li>
             </ul>
