--- a/index.html
+++ b/index.html
@@ -83,24 +83,24 @@
         
         <section class="sect_three">
             <h2 class="sect_three-title">Our Team</h2>
-        <ul class="sect_three-li">
+        <ul>
             <li class="sect_three-ul-li">
-                <img class="sect_three-ul-img"  src="./images/img.jpg" alt="фото робітника 1">
+                <img src="./images/img.jpg" alt="фото робітника 1">
                 <h3 class="sect_three-ul-title">Mark Guerrero</h3>
                 <p class="sect_three-ul-text">Product Designer</p>
             </li>
-            <li>
-                <img class="sect_three-ul-img" src="./images/img(1).jpg" alt="фото робітника 2">
+            <li class="sect_three-ul-li">
+                <img src="./images/img(1).jpg" alt="фото робітника 2">
                 <h3 class="sect_three-ul-title">Tom Ford</h3>
                 <p class="sect_three-ul-text">Frontend Developer</p>
             </li>
-            <li>
-                <img class="sect_three-ul-img" src="./images/img(2).jpg" alt="фото робітника 3">
+            <li class="sect_three-ul-li">
+                <img src="./images/img(2).jpg" alt="фото робітника 3">
                 <h3 class="sect_three-ul-title">Camila Garcia</h3>
                 <p class="sect_three-ul-text">Marketing</p>
             </li>
-            <li>
-                <img class="sect_three-ul-img" src="./images/img(3).jpg" alt="фото робітника 4">
+            <li class="sect_three-ul-li">
+                <img src="./images/img(3).jpg" alt="фото робітника 4">
                 <h3 class="sect_three-ul-title">Daniel Wilson</h3>
                 <p class="sect_three-ul-text">UI Designer</p>
             </li>
